--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0"
+    "@vue/test-utils": "^2.4.6",
+    "vite": "^6.2.0",
+    "vitest": "^3.1.1"
   }
 }
