--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.5.13"
@@ -15,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
+    "jest-junit": "^16.0.0",
     "jsdom": "^26.1.0",
     "vite": "^6.2.0",
     "vitest": "^3.1.1"
